header-mesh-demo/header-deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: py-header
    version: blue
  name: py-header
spec:
  replicas: 2
  selector:
    matchLabels:
      app: py-header
      version: blue
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      creationTimestamp: null
      labels:
        app: py-header
        version: blue
    spec:
      containers:
      - image: surote/py-http-echo:04b84150ce36a4b9fae9d99d8c52362f37b8497c
        name: py-http-echo
        resources: {}
status: {}
