header-mesh-demo/call-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: svc-py-http-call
  name: svc-py-http-call
spec:
  ports:
  - name: http
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: py-http-call
  type: ClusterIP
status:
  loadBalancer: {}
