header-mesh-demo/header-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: svc-py-header
  name: svc-py-header
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: py-header
  type: ClusterIP
status:
  loadBalancer: {}
