header-mesh-demo/py-header-dt.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dt-py-header-bluegreen
spec:
  host: svc-py-header
  trafficPolicy:
      loadBalancer:
        consistentHash:
          httpCookie: 
            name: ISTIOID
            ttl: 60s
  subsets:
  - name: blue
    labels:
      version: blue
  - name: green
    labels:
      version: green
